src/Tests/Error/TypeBoolError.php
<?php

namespace ColdBolt\Tests\Error;

use ColdBolt\Tests\Error\AssertError;

class TypeBoolError extends AssertError
{
}
